--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <html>
+<head>
+	<script src="movies.js" type="text/javascript"></script>
+</head>
+
+<body>
+	<header>Midterm Movie Madness</header>
+
+
+</body>
 </html>
