--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<script src="movies.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="movies.css" type="text/css"></link>
 </head>
 
 <body>
