fixed footer text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-	<footer>&#169;, Isaiah Mayerchak &#38; Kirby Olson</footer>
+	<footer>&#169;2014 Isaiah Mayerchak &#38; Kirby Olson</footer>
 
 
 </body>
