Testing JS, added to d-Notes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<header>Midterm Movie Madness</header>
 	
 	<section> <!-- the main section for information -->
+		<button onclick="getMovieInfo()" >Click me</button>
+		<input type="text" id="movietitle"></input>
 
 	</section>
 
