--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script>
-		var head= document.getElementsByTagName('head')[0];
-		var script= document.createElement('script');
-		script.type= 'text/javascript';
- 		script.src= 'movies.js';
- 		head.appendChild(script);
-	</script>
+	<script src="movies.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="movies.css" type="text/css"></link>
 </head>
-
 <body>
 	<header>Midterm Movie Madness</header>
 	
