--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="movies.js" type="text/javascript"></script>
+	<script src="movies2.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="movies.css" type="text/css"></link>
 </head>
 <body>
 	<header>Midterm Movie Madness</header>
 	
 	<section> <!-- the main section for information -->
-		<button onclick="getMovieInfo()" >Click me</button>
+		<button onclick="createRTurl()" >Click me</button>
 		<input type="text" id="movietitle"></input>
 
 	</section>
