--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="movies2.js" type="text/javascript"></script>
+	<script src="movies.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="movies.css" type="text/css"></link>
 </head>
 <body>
