--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<script src="movies.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="movies.css" type="text/css"></link>
+	<title>Midterm Movie Madness</title>
 </head>
 <body>
 	<header>Midterm Movie Madness</header>
