--- a/index.html
+++ b/index.html
@@ -7,16 +7,30 @@
 </head>
 <body>
 	<header>Midterm Movie Madness</header>
-	
-	<section> <!-- the main section for information -->
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="disclaimer.html">Disclaimer</a></li>
+			<li><a href="aboutus.html">About Us</a></li>
+		</ul>
+	</nav>
+	<div> <!-- buttons and things -->
 		<button onclick="createRTurl()" >Click me</button>
 		<input type="text" id="movietitle"></input>
 
-	</section>
+	</div>  
 
-	<aside> <!-- in case we want to put stuff on the side -->
+	<div id = "content"> <!-- content generated here -->
+		<div id="sideinfo">
+			
+		</div>
+		<aside id="maininfo">
+			
+		</aside>
+	</div>
 
-	</aside>
+
+
 
 
 
