added location input box

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 			</ul>
 		</nav>
 		<div id = "inputsection"> <!-- buttons and things -->		
-			<input type="text" id="movietitle"></input>
+			<input type="text" id="movietitle" value="Enter a movie"></input>
+			<input type="text" id="zipcode" value="Enter your zipcode"></input>
 			<button onclick="createRTurl()" >Click me</button>
 
 		</div>  
