Further CSS work

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 				<li><a href="aboutus.html">About Us</a></li>
 			</ul>
 		</nav>
-		<div id = "inputsection"> <!-- buttons and things -->		
+		<div id = "inputsection"> <!-- buttons and things -->
 			<input type="text" id="movietitle" value="Enter a movie"></input>
 			<input type="text" id="zipcode" value="Enter your zipcode"></input>
 			<button onclick="createRTurl()" >Click me</button>
 
-		</div>  
+		</div>
 
 		<div id = "content"> <!-- content container -->
 			<div id="sideinfo"> <!-- side information box container -->
@@ -30,18 +30,18 @@
 					</div>
 					<!-- poster here -->
 				</div>
-				
 
-				<div class="sideContent" id="mpaa"> 
+
+				<div class="sideContent" id="mpaa">
 					<div class="containerHeader">
-						<h2>Rated</h2>					
+						<h2>Rated</h2>
 					</div>
 					<!-- mpaa rating here -->
 				</div>
 
 				<div class="sideContent" id="ratings">
-					<div class="containerHeader">
-						<h2>Ratings</h2>
+					<div class="containerHeader" >
+						<h2>MPAA rating</h2>
 					</div>
 					<div id="criticRating">
 						<h4>Critic</h4>
@@ -51,7 +51,7 @@
 						<h4>Audience</h4>
 						<!-- audience rating here -->
 					</div>
-					
+
 				</div>
 
 				<div class="sideContent" id="theaters">
@@ -69,21 +69,21 @@
 
 				<div class="mainContent" id="title">
 					<div class="containerHeader">
-						<h2>Movie Title</h2>				
+						<h2>Movie Title</h2>
 					</div>
 					<!-- title here -->
 				</div>
 
 				<div class="mainContent" id="synopsis">
 					<div class="containerHeader">
-						<h2>Synopsis</h2>				
+						<h2>Synopsis</h2>
 					</div>
 					<!-- synopsis here -->
 				</div>
 
 				<div class="mainContent" id="trailer">
 					<div class="containerHeader">
-						<h2>Trailer</h2>				
+						<h2>Trailer</h2>
 					</div>
 					<!-- trailer iframe here -->
 				</div>
