--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 					<div class="containerHeader"> <!-- container header level -->
 						<h2>Poster</h2>  <!-- container title -->
 					</div>
-					<!-- poster here -->
+					<div id="posterContainer">
+						<!-- poster here -->
+					</div>
 				</div>
 
 
@@ -36,7 +38,9 @@
 					<div class="containerHeader">
 						<h2>Rated</h2>
 					</div>
-					<!-- mpaa rating here -->
+					<div id="mpaaContainer">
+						<!-- mpaa rating here -->
+					</div>
 				</div>
 
 				<div class="sideContent" id="ratings">
@@ -45,11 +49,15 @@
 					</div>
 					<div id="criticRating">
 						<h4>Critic</h4>
-						<!-- Critic rating here -->
+						<div id="criticContainer">
+							<!-- Critic rating here -->
+						</div>
 					</div>
 					<div id="audienceRating">
 						<h4>Audience</h4>
-						<!-- audience rating here -->
+						<div id="audienceContainer">
+							<!-- audience rating here -->
+						</div>
 					</div>
 
 				</div>
@@ -58,7 +66,9 @@
 					<div class="containerHeader">
 						<h2>Theaters near me</h2>
 					</div>
-					<!-- theater list here -->
+					<div id="theaterContainer">
+						<!-- theater list here -->
+					</div>
 				</div>
 
 			</div>  <!-- end side container -->
@@ -71,21 +81,27 @@
 					<div class="containerHeader">
 						<h2>Movie Title</h2>
 					</div>
-					<!-- title here -->
+					<div id="titleContainer">
+						<!-- title here -->
+					</div>
 				</div>
 
 				<div class="mainContent" id="synopsis">
 					<div class="containerHeader">
 						<h2>Synopsis</h2>
 					</div>
-					<!-- synopsis here -->
+					<div id="synopsisContainer">
+						<!-- synopsis here -->
+					</div>
 				</div>
 
 				<div class="mainContent" id="trailer">
 					<div class="containerHeader">
 						<h2>Trailer</h2>
 					</div>
-					<!-- trailer iframe here -->
+					<div id="trailerContainer">
+						<!-- trailer iframe here -->
+					</div>
 				</div>
 
 
