Fixed awkward nag li jumping problem

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -4,10 +4,8 @@
 	<link rel="stylesheet" href="movies.css" type="text/css"></link>
 	<title>Movie Madness Disclaimer</title>
 	<style>
-	div.hello {
-		border-style: solid;
-		border-width: 2px;
-		padding: 4px;
+	div.bodytext {
+		color: black;
 	}
 	</style>
 </head>
@@ -41,10 +39,10 @@
 					<div class="containerHeader">
 						<h2>DON'T DO DRUGS...</h2>
 					</div>
-					<div>
+					<div class="bodytext">
 						<h4>...unless they're prescription drugs...</h4>
 					</div>
-					<div>
+					<div class="bodytext">
 						<h5>...or if they turn you into Captain America</h5>
 					</div>
 					
@@ -63,6 +61,7 @@
 					<div class="containerHeader">
 						<h2>DISCLAIMER</h2>				
 					</div>
+					<div class="bodytext">
 					<p>We are not responsible for any of these movies being of poor quality despite good reviews.</p>
 					<p>We are also not responsible for any of these movies having terrible reviews despite being good.</p>
 					<p>We are also not responsible for you forgetting to do your homework because you were too busy using our site.</p>
@@ -79,6 +78,7 @@
 						<li>Getting dissected by aliens</li>
 					</ul>
 					<p>We apologize if our non-liability is an inconvenience.</p>
+					</div>
 				</div>
 
 				<div class="mainContent">
