--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<div class="containerHeader"> <!-- container header level -->
 						<h2>Poster</h2>  <!-- container title -->
 					</div>
-					<div id="posterContainer">
+					<div id="posterContainer" class="content">
 						<!-- poster here -->
 					</div>
 				</div>
@@ -38,7 +38,7 @@
 					<div class="containerHeader">
 						<h2>Rated</h2>
 					</div>
-					<div id="mpaaContainer">
+					<div id="mpaaContainer" class="content">
 						<!-- mpaa rating here -->
 					</div>
 				</div>
@@ -49,13 +49,13 @@
 					</div>
 					<div id="criticRating">
 						<h4>Critic</h4>
-						<div id="criticContainer">
+						<div id="criticContainer" class="content">
 							<!-- Critic rating here -->
 						</div>
 					</div>
 					<div id="audienceRating">
 						<h4>Audience</h4>
-						<div id="audienceContainer">
+						<div id="audienceContainer" class="content">
 							<!-- audience rating here -->
 						</div>
 					</div>
@@ -66,7 +66,7 @@
 					<div class="containerHeader">
 						<h2>Theaters near me</h2>
 					</div>
-					<div id="theaterContainer">
+					<div id="theaterContainer" class="content">
 						<!-- theater list here -->
 					</div>
 				</div>
@@ -81,7 +81,7 @@
 					<div class="containerHeader">
 						<h2>Movie Title</h2>
 					</div>
-					<div id="titleContainer">
+					<div id="titleContainer" class="content">
 						<!-- title here -->
 					</div>
 				</div>
@@ -90,7 +90,7 @@
 					<div class="containerHeader">
 						<h2>Synopsis</h2>
 					</div>
-					<div id="synopsisContainer">
+					<div id="synopsisContainer" class="content">
 						<!-- synopsis here -->
 					</div>
 				</div>
@@ -99,7 +99,7 @@
 					<div class="containerHeader">
 						<h2>Trailer</h2>
 					</div>
-					<div id="trailerContainer">
+					<div id="trailerContainer" class="content">
 						<!-- trailer iframe here -->
 					</div>
 				</div>
