Changed movie picture quality

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -30,19 +30,24 @@
 		<div id = "content"> <!-- content container -->
 			<div id="sideinfo" class="diclaimerside"> <!-- side information box container -->
 				<div class="sideContent"> <!-- container level -->
-					<img id="legalpic" src="http://images.mysecuritysign.com/img/lg/K/Not-Responsible-Property-Sign-K-1001.gif"></img>
+					<div class="containerHeader"> <!-- container header level -->
+						<h2>WARNING</h2>  <!-- container title -->
+					</div>
+					<div>
+						<img id="legalpic" src="http://images.mysecuritysign.com/img/lg/K/Not-Responsible-Property-Sign-K-1001.gif"></img>
+					</div>
 				</div>
 				
 
 				<div class="sideContent"> 
 					<div class="containerHeader">
-						<h1>Important info about life:</h1>					
+						<h1>IMPORTANT LEGAL INFO</h1>					
 					</div>
 				</div>
 
 				<div class="sideContent">
 					<div class="containerHeader">
-						<h2>DON'T DO DRUGS...</h2>
+						<h2>DON'T DO DRUGS</h2>
 					</div>
 					<div class="bodytext">
 						<h4>...unless they're prescription drugs...</h4>
@@ -58,7 +63,7 @@
 
 				<div class="mainContent">
 					<div class="containerHeader">
-						<h2>DISCLAIMER</h2>				
+						<h2>Disclaimer</h2>				
 					</div>
 					<div class="bodytext">
 						<p>We are not responsible for any of these movies being of poor quality despite good reviews.</p>
@@ -85,8 +90,8 @@
 						<h2>Disclaimer #2</h2>				
 					</div>
 					<div class="bodytext">
-						<p>Our algorithms aren't perfect, so sometimes, depending on what your specific search term is, you may not get the exact result you're looking for.</br> We're sorry about this.</p>
-						<p>In other words, our site is unable to get a perfect result 100% of the time--we're not about that 3-digit life.</p>
+						<p>Our algorithms aren't perfect, so sometimes, depending on what your specific search term is, you may not get the exact result you're looking for. We're sorry about this.</p>
+						<p>In other words, this site is unable to get a perfect result 100% of the time--we're not about that 3-digit life.</p>
 						<h4>Other things this site is unable to do:</h4>
 						<ul>
 							<li>Cook dinner</li>
