--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,93 @@
 			</ul>
 		</nav>
 
+		<div id = "content"> <!-- content container -->
+			<div id="sideinfo"> <!-- side information box container -->
+				<div class="sideContent" id="Poster"> <!-- container level -->
+					<div class="containerHeader"> <!-- container header level -->
+						<h2>Kirby</h2>  <!-- container title -->
+					</div>
+					<div class="content">
+						<!-- poster here -->
+					</div>
+				</div>
 
+
+				<div class="sideContent" id="mpaa">
+					<div class="containerHeader">
+						<h2>Isaiah</h2>
+					</div>
+					<div class="content">
+						<!-- mpaa rating here -->
+					</div>
+				</div>
+
+				<div class="sideContent" >
+					<div class="containerHeader" >
+						<h2>MPAA rating</h2>
+					</div>
+					<div>
+						<h4>Critic</h4>
+						<div class="content">
+							<!-- Critic rating here -->
+						</div>
+					</div>
+					<div>
+						<h4>Audience</h4>
+						<div class="content">
+							<!-- audience rating here -->
+						</div>
+					</div>
+
+				</div>
+
+				<div class="sideContent" id="theaters">
+					<div class="containerHeader">
+						<h2>Theaters near me</h2>
+					</div>
+					<div id="theaterContainer" class="content">
+						<!-- theater list here -->
+					</div>
+				</div>
+
+			</div>  <!-- end side container -->
+
+
+
+			<div id="maininfo">  <!-- main information box containter -->
+
+				<div class="mainContent" id="title">
+					<div class="containerHeader">
+						<h2>Movie Title</h2>
+					</div>
+					<div id="titleContainer" class="content">
+						<!-- title here -->
+					</div>
+				</div>
+
+				<div class="mainContent" id="synopsis">
+					<div class="containerHeader">
+						<h2>Synopsis</h2>
+					</div>
+					<div id="synopsisContainer" class="content">
+						<!-- synopsis here -->
+					</div>
+				</div>
+
+				<div class="mainContent" id="trailer">
+					<div class="containerHeader">
+						<h2>Trailer</h2>
+					</div>
+					<div id="trailerContainer" class="content">
+						<!-- trailer iframe here -->
+					</div>
+				</div>
+
+
+			</div> <!-- end main container -->
+		</div> <!-- end content container -->
+
+	<footer>&#169;2014 Isaiah Mayerchak &#38; Kirby Olson</footer>
 	</div>
 </body>
 </html>
