Added images folder with images; working about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -3,6 +3,16 @@
 <head>
 	<link rel="stylesheet" href="movies.css" type="text/css"></link>
 	<title>About Us</title>
+	<style>
+		img#kirbypic {
+			height: 150px;
+			width: 180px;
+		}
+		img#isaiahpic {
+			height: 150px;
+			width: 180px;
+		}
+	</style>
 </head>
 <body>
 	<div id = "page">  <!-- page container -->
@@ -22,7 +32,7 @@
 						<h2>Kirby</h2>  <!-- container title -->
 					</div>
 					<div class="content">
-						<!-- poster here -->
+						<img id="kirbypic" src="images/kirby.jpg"></img>
 					</div>
 				</div>
 
@@ -32,7 +42,7 @@
 						<h2>Isaiah</h2>
 					</div>
 					<div class="content">
-						<!-- mpaa rating here -->
+						<img id="isaiahpic" src="images/isaiahpic.jpg"></img>
 					</div>
 				</div>
 
@@ -72,7 +82,7 @@
 
 				<div class="mainContent" id="title">
 					<div class="containerHeader">
-						<h2>Movie Title</h2>
+						<h2>Bios</h2>
 					</div>
 					<div id="titleContainer" class="content">
 						<!-- title here -->
@@ -88,14 +98,6 @@
 					</div>
 				</div>
 
-				<div class="mainContent" id="trailer">
-					<div class="containerHeader">
-						<h2>Trailer</h2>
-					</div>
-					<div id="trailerContainer" class="content">
-						<!-- trailer iframe here -->
-					</div>
-				</div>
 
 
 			</div> <!-- end main container -->
