--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
 						<h2>Kirby</h2>  <!-- container title -->
 					</div>
 					<div class="content">
-						<img id="kirbypic" src="images/kirby.jpg"></img>
+						<img id="kirbypic" src="kirby.jpg"></img>
 					</div>
 				</div>
 
@@ -42,7 +42,7 @@
 						<h2>Isaiah</h2>
 					</div>
 					<div class="content">
-						<img id="isaiahpic" src="images/isaiahpic.jpg"></img>
+						<img id="isaiahpic" src="isaiahpic.jpg"></img>
 					</div>
 				</div>
 
