--- a/aboutus.html
+++ b/aboutus.html
@@ -5,12 +5,12 @@
 	<title>About Us</title>
 	<style>
 		img#kirbypic {
-			height: 150px;
-			width: 180px;
+			height: auto;
+			width: 175px;
 		}
 		img#isaiahpic {
-			height: 150px;
-			width: 180px;
+			height: auto;
+			width: 175px;
 		}
 		div.bodytext {
 			text-align: left;
