--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
 	<div id = "page">  <!-- page container -->
-		<header><h1>Midterm Movie Madness</h1></header>
+		<header>
+			<img src="popcorn.png"/>
+			<img src="popcorn.png"/>
+			<img src="popcorn.png"/>
+			<h1>Midterm Movie Madness</h1>
+			<img src="popcorn.png"/>
+			<img src="popcorn.png"/>
+			<img src="popcorn.png"/>
+		</header>
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
